--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express-session": "^1.18.1",
+    "@vitalets/google-translate-api": "^9.2.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
