--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "google-translate-api-x": "^10.7.2",
+    "http-proxy-agent": "^7.0.2",
     "mongoose": "^8.15.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.25.39"
