change the frontend service urls to local ones

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.ts ",
-    "dev": "ts-node-dev src/index.ts"
+    "start": "NODE_ENV=PRODUCTION ts-node src/index.ts",
+    "dev": "NODE_ENV=DEVELOPMENT ts-node-dev src/index.ts"
   },
   "author": "",
   "license": "ISC",
