--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.1",
     "google-translate-api-x": "^10.7.2",
     "http-proxy-agent": "^7.0.2",
+    "kroman": "^1.0.1",
     "mongoose": "^8.15.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.25.39"
