--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "NODE_ENV=PRODUCTION ts-node src/index.ts",
     "dev": "NODE_ENV=DEVELOPMENT ts-node-dev src/index.ts"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "author": "",
   "license": "ISC",
@@ -28,9 +33,14 @@
     "zod": "^3.25.39"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.27.0",
     "@types/express": "^5.0.2",
+    "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.27.0",
+    "jest": "^29.7.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
   }
