--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.27.0",
     "jest": "^29.7.0",
+    "supertest": "^7.1.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
   }
