--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "pretty-ms": "^9.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
