--- a/backend/package.json
+++ b/backend/package.json
@@ -38,8 +38,10 @@
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.27.0",
     "@types/express": "^5.0.2",
+    "@types/jest": "^30.0.0",
     "babel-jest": "^30.0.0-beta.3",
     "eslint": "^9.27.0",
+    "eslint-config-love": "^121.0.0",
     "jest": "^29.7.0",
     "supertest": "^7.1.1",
     "typescript": "^5.8.3",
