--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "http-proxy-agent": "^7.0.2",
     "kroman": "^1.0.1",
     "mongoose": "^8.15.1",
+    "redis": "^5.5.6",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.25.39"
   },
