--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@vitalets/google-translate-api": "^9.2.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "discord.js": "^14.21.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
